--- a/HelpDesk v1/WebContent/index.zul
+++ b/HelpDesk v1/WebContent/index.zul
@@ -11,7 +11,7 @@ contentType="text/html;charset=UTF-8"
 	<menubar apply="mainControllers.IndexController" id="menubar"
 		autodrop="true">
 		<menuitem label="Pagrindinis" href="index.zul" />
-		<menuitem label="Paslaugos" onClick="alert(self.label)" />
+		<menuitem label="Paslaugos" href="serviceSearch.zul" />
 		<menuitem label="Sutartys" href="contractSearch.zul" />
 		<menuitem label="Klientai" href="clientSearch.zul" />
 		<menuitem label="Kreipiniai" href="appelationSearch.zul" />
