--- a/HelpDesk v1/WebContent/index.zul
+++ b/HelpDesk v1/WebContent/index.zul
@@ -6,49 +6,7 @@ contentType="text/html;charset=UTF-8"
 
 <zk xmlns:n="native">
 
-
-	<!-- Begin Menu -->
-	<menubar apply="mainControllers.IndexController" id="menubar"
-		autodrop="true">
-		<menuitem label="Pagrindinis" href="index.zul" />
-		<menuitem label="Paslaugos" href="serviceSearch.zul" />
-		<menuitem label="Sutartys" href="contractSearch.zul" />
-		<menuitem label="Klientai" href="clientSearch.zul" />
-		<menuitem label="Kreipiniai" href="appelationSearch.zul" />
-	</menubar>
-	<!-- End Menu -->
-	<hbox width="100%" pack="end">
-		<cell>
-			<label id="timer" width="33%" />
-
-			<timer id="timer2" delay="1000" repeats="true">
-				<attribute name="onTimer">
-	Locale locale = org.zkoss.util.Locales.getCurrent();
-	java.text.DateFormat dateFormat = java.text.DateFormat.getDateTimeInstance(
-			java.text.DateFormat.MEDIUM, java.text.DateFormat.MEDIUM, locale);
-	String strTime = dateFormat.format(java.util.Calendar.getInstance(locale)
-			.getTime());
-	timer.setValue(strTime);
-</attribute>
-			</timer>
-		</cell>
-		<cell>
-			<label id="profile"
-				value="${sessionScope.Authentication.loginName}" />
-		</cell>
-		<cell>
-			<label value="logOut" id="logOut" />
-		</cell>
-	</hbox>
-
-	<div id="container" sclass="container" width="570px">
-<vlayout id="product_list" width="100%">
-
-		<!--  <n:h1 class="mo_head">HD kreipinių valdymo sistema</n:h1> -->
-            <image
-						src="/img/sistema.png" /> 
-			
-		</vlayout>
+<groupbox>
   <button label="Importuoti duombaze" upload="true,maxsize=300">
       <attribute name="onUpload">
         <![CDATA[
@@ -72,5 +30,44 @@ contentType="text/html;charset=UTF-8"
         ]]>
       </attribute>
     </button>
-	</div>
+	</groupbox>		
+
+<div sclass="z-toolbar" style="padding:0">
+<hbox pack="stretch" sclass="hboxRemoveWhiteStrips" width="100%">
+<toolbar align="start" style="float:left; border-style: none;">
+            <toolbarbutton label="Pagrindinis" href="index.zul" />
+            <toolbarbutton label="Paslaugos" onClick="alert(self.label)"  />            
+            <toolbarbutton label="Sutartys" onClick="alert(self.label)" />
+            <toolbarbutton label="Klientai" href="clientSearch.zul" />
+            <toolbarbutton label="Kreipiniai" href="appelationSearch.zul" />            
+</toolbar>
+<toolbar align="end" style="float:right; border-style: none;">
+   
+ <cell>
+			<label id="timer" width="33%" />
+
+			<timer id="timer2" delay="1000" repeats="true">
+				<attribute name="onTimer">
+	Locale locale = org.zkoss.util.Locales.getCurrent();
+	java.text.DateFormat dateFormat = java.text.DateFormat.getDateTimeInstance(
+			java.text.DateFormat.MEDIUM, java.text.DateFormat.MEDIUM, locale);
+	String strTime = dateFormat.format(java.util.Calendar.getInstance(locale)
+			.getTime());
+	timer.setValue(strTime);
+</attribute>
+			</timer>
+		</cell>
+       
+           
+		<cell>
+			<label id="profile"
+				value="${sessionScope.Authentication.loginName}" />
+		</cell>
+		<cell>
+			<label value="logOut" id="logOut" />
+		</cell>
+</toolbar>
+</hbox>
+</div>
+<include src="footer.zul"/>
 </zk>
