--- a/HelpDesk v1/WebContent/appelationSearch.zul
+++ b/HelpDesk v1/WebContent/appelationSearch.zul
@@ -4,7 +4,7 @@
 contentType="text/html;charset=UTF-8"
 ?>
 <zk xmlns:n="native" xmlns:x="xhtml">
-	<include src="index.zul" />
+	<include src="menu.zul" />
 
 
 	<style>
@@ -226,4 +226,5 @@ contentType="text/html;charset=UTF-8"
 
 		</tabbox>
 	</groupbox>
+	<include src="footer.zul"/>
 </zk>
