--- a/HelpDesk v1/WebContent/clientSearch.zul
+++ b/HelpDesk v1/WebContent/clientSearch.zul
@@ -4,7 +4,7 @@
 contentType="text/html;charset=UTF-8"
 ?>
 <zk xmlns:n="native">
-	<include src="index.zul" />
+	<include src="menu.zul" />
 	<style>
 		.z-listbox-autopaging .z-listcell-cnt { height: 15px; overflow:
 		hidden; } .cg-title { font-weight: normal; color: #008DB7;
@@ -77,5 +77,5 @@ contentType="text/html;charset=UTF-8"
 		
 	</groupbox>
 
-
+<include src="footer.zul"/>
 </zk>
