--- a/HelpDesk v1/WebContent/contractSearch.zul
+++ b/HelpDesk v1/WebContent/contractSearch.zul
@@ -1,7 +1,7 @@
 <?page title="Sutartys" contentType="text/html;charset=UTF-8"?>
 
 <zk xmlns:n="native">
-	<include src="index.zul" />
+	<include src="menu.zul" />
 	<style>
 		.z-listbox-autopaging .z-listcell-cnt { height: 15px; overflow:
 		hidden; } .cg-title { font-weight: normal; color: #008DB7;
@@ -83,5 +83,5 @@
 
 	</groupbox>
 
-
+<include src="footer.zul"/>
 </zk>
