--- a/HelpDesk v1/WebContent/profileUser.zul
+++ b/HelpDesk v1/WebContent/profileUser.zul
@@ -5,7 +5,7 @@ contentType="text/html;charset=UTF-8"
 ?>
 <?link rel="stylesheet" type="text/css" href="/style.css"?>
 <window apply="mainControllers.EmployeeProfileViewController">
-<include src="index.zul" />
+<include src="menu.zul" />
     <vlayout>
         <grid width="500px">
             <columns>
@@ -82,4 +82,5 @@ contentType="text/html;charset=UTF-8"
             <button id="reloadProfile" label="Atnaujinti"/>
         </hlayout>
     </vlayout>
+    <include src="footer.zul"/>
 </window>
