--- a/HelpDesk v1/WebContent/clientSearch.zul
+++ b/HelpDesk v1/WebContent/clientSearch.zul
@@ -1,7 +1,7 @@
 <?page 
   xml="version="1.0" 
   encoding="UTF-8""
-contentType="text/html;charset=UTF-8"
+contentType="text/html;charset=UTF-8" title="Klientai"
 ?>
 <zk xmlns:n="native">
 	<include src="menu.zul" />
