--- a/HelpDesk v1/WebContent/contractSearch.zul
+++ b/HelpDesk v1/WebContent/contractSearch.zul
@@ -15,13 +15,24 @@
 		.status .head { text-align : right; } .status .head span {
 		font-weight : bold; }
 	</style>
+	<groupbox sclass="footerUp">
+	        <hbox>
+                <image src="/img/contract2.png"></image>
+                <vbox>
+			     <n:h1 class="cg-title">Sutartys</n:h1> 
+			    <hbox class="cg-down-title"> 	
+				<a href="index.zul"
+					label="Pagrindinis" class="cg-down-title" />
+				»
+				<a href="contractSearch.zul"
+					label="Sutartys" class="cg-down-title" />
+				</hbox>
+				</vbox>
+			</hbox>   
+	</groupbox>		
 	<groupbox sclass="main z-demo-config"
 		apply="mainControllers.ContractsSearchController">
 		<caption label="Sutartys" />
-		<hlayout spacing="40px" style="padding-left: 10px;">
-			<image src="/img/client2.png"></image>
-			<n:h1 class="cg-title">Sutarčių administravimas</n:h1>
-		</hlayout>
 		<vlayout spacing="15px">
 			<hbox>
 				<toolbar>
