--- a/HelpDesk v1/WebContent/menu.zul
+++ b/HelpDesk v1/WebContent/menu.zul
@@ -64,7 +64,7 @@ padding-bottom: 0;
             <toolbarbutton image="/img/employee.png" label="Darbuotojai" href="employeeSearch.zul" />            
             <toolbarbutton image="/img/client4.png" label="Klientai" href="clientSearch.zul" />
             <toolbarbutton image="/img/task2.png" label="Kreipiniai" href="appelationSearch.zul" />      
-            <toolbarbutton image="/img/task2.png" label="Savitarna" href="selfService.zul" />        
+            <toolbarbutton image="/img/self.png" label="Savitarna" href="selfService.zul" />        
 </toolbar>
 <toolbar apply="mainControllers.LogOutController" align="end" style="float:right; border-style: none;">
    <!-- 
